[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/Player/player2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Spark forest 1-1.tres" type="TileSet" id=2]
[ext_resource path="res://testingthings/lighttestting.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/light.png" type="Texture" id=4]
[ext_resource path="res://testingthings/Bosstest.gd" type="Script" id=5]
[ext_resource path="res://Characters/enemy/Event_trigger.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 60.0333

[node name="Node2D" type="Node2D"]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 484, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 393219, 0, 0, 393229, 0, 0, 393239, 0, 0, 393249, 0, 0 )

[node name="Node2D" parent="." instance=ExtResource( 3 )]

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2( 738, 296 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -6, 2 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
root_node = NodePath("")

[node name="Tween" type="Tween" parent="Area2D"]

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )

[node name="Area2D2" parent="." groups=["Enemy"] instance=ExtResource( 6 )]
position = Vector2( 304, 352 )
scale = Vector2( 4.64539, 3.44125 )

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
